# lab2-Malevrovich

cpp/: CMakeLists.txt  input.txt  output.txt
cpp/common/: CMakeLists.txt
cpp/common/include/: amqp_channel.hpp  message.hpp  sentences_utils.hpp  serialization.hpp  task.hpp  uuid.hpp
cpp/common/include/amqp/: amqp_adapter.hpp  amqp_channel.hpp
cpp/common/include/tasks/: mood.hpp  mood_task.hpp  name_replace_task.hpp  sentence_sort_task.hpp  top_n_task.hpp  word_cnt_task.hpp
cpp/common/src/: amqp_channel.cpp  message.cpp  sentences_utils.cpp  serialization.cpp  task.cpp  uuid.cpp
cpp/common/src/tasks/: mood_task.cpp  name_replace_task.cpp  sentence_sort_task.cpp  top_n_task.cpp  word_cnt_task.cpp
cpp/consumer/: CMakeLists.txt
cpp/consumer/include/: amqp_receiver.hpp  consumer_app.hpp
cpp/consumer/src/: main.cpp
cpp/producer/: CMakeLists.txt
cpp/producer/include/: aggregator.hpp  amqp_publisher.hpp  producer.hpp  producer_app.hpp  sink.hpp
cpp/producer/src/: aggregator.cpp  main.cpp
